--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer components {
+  .btn-primary {
+    @apply grid place-items-center font-medium border-4 border-solid border-black text-xs shadow-solid lg:text-base;
+  }
+
   .decoration-dots {
     @apply h-48 bg-decoration-dots bg-cover bg-top bg-no-repeat md:bg-[length:120%_130%] lg:bg-top;
   }
