--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .btn-primary {
-    @apply grid place-items-center font-medium border-4 border-solid border-black text-xs shadow-solid lg:text-base hover:bg-yellow;
+    @apply grid place-items-center font-medium border-4 border-solid border-black text-xs shadow-solid lg:text-base lg:hover:bg-yellow;
   }
 
   .decoration-dots {
